--- a/voting-app/result-app-service.yml
+++ b/voting-app/result-app-service.yml
@@ -12,5 +12,5 @@ spec:
       targetPort: 80
       nodePort: 30005
   selector:
-    name: result-pod
+    name: result-app-pod
     app: demo-voting-app
